--- a/HoneyPot_front/honeypot_vue/public/index.html
+++ b/HoneyPot_front/honeypot_vue/public/index.html
@@ -12,6 +12,9 @@
     <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
+    
+    <!--카카오로그인-->
+    <!--<script src="//developers.kakao.com/sdk/js/kakao.js"></script>-->
   </head>
   <body>
     <noscript>
