--- a/HoneyPot_front/honeypot_vue/public/index.html
+++ b/HoneyPot_front/honeypot_vue/public/index.html
@@ -10,9 +10,7 @@
     <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.2.0.js"></script>
     <!--네이버로그인-->
     <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
-
-
-
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
     
     <!--카카오로그인-->
